FLAC BPM tags could be read in incorrectly.

BUG: 234166